--- a/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
+++ b/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
@@ -10,7 +10,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.3.0-alpha" />
+	  <PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.6.0-alpha" />
+	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator" Version="0.1.0-alpha" />
+	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator.Abstractions" Version="0.1.0-alpha" />
 	</ItemGroup>
 
 </Project>
