--- a/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
+++ b/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.7.0-alpha" />
+	  <PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.4.0-alpha" />
 	</ItemGroup>
 
 </Project>
