--- a/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
+++ b/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
@@ -10,8 +10,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.8.0-alpha" />
-	  <PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.4.0-alpha" />
+	  <PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.9.0-alpha" />
+	  <PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.5.0-alpha" />
+	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator" Version="0.9.0-alpha" />
 	</ItemGroup>
 
 </Project>
