--- a/tst/MCB.Core.Domain.Entities.Tests/MCB.Core.Domain.Entities.Tests.csproj
+++ b/tst/MCB.Core.Domain.Entities.Tests/MCB.Core.Domain.Entities.Tests.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<Nullable>enable</Nullable>
+		<Nullable>disable</Nullable>
 
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
@@ -12,10 +12,10 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="FluentAssertions" Version="6.6.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+		<PackageReference Include="FluentAssertions" Version="6.7.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
 		<PackageReference Include="xunit" Version="2.4.1" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
@@ -30,7 +30,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.4.0-alpha" />
+		<PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.5.0-alpha" />
 	</ItemGroup>
 
 </Project>
