--- a/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
+++ b/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -10,9 +10,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.9.0-alpha" />
+	  <PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.16.0-alpha" />
 	  <PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.5.0-alpha" />
-	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator" Version="0.9.0-alpha" />
+	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator" Version="0.10.0-alpha" />
 	</ItemGroup>
 
 </Project>
