refact: add project files in sln

--- a/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
+++ b/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
@@ -7,12 +7,24 @@
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Authors>Marcelo Castelo Branco</Authors>
 		<Company>MCB</Company>
+		<PackageProjectUrl>https://github.com/MarceloCas/MCB.Core.Domain.Entities</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<RepositoryUrl>https://github.com/MarceloCas/MCB.Core.Domain.Entities</RepositoryUrl>
+		<IncludeSymbols>True</IncludeSymbols>
+		<SymbolPackageFormat>symbols.nupkg</SymbolPackageFormat>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.23.0-alpha" />
-	  <PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.5.0-alpha" />
-	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator" Version="0.13.0-alpha" />
+		<None Include="..\..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.25.0-alpha" />
+		<PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.6.0-alpha" />
+		<PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator" Version="0.15.0-alpha" />
 	</ItemGroup>
 
 </Project>
