--- a/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
+++ b/src/MCB.Core.Domain.Entities/MCB.Core.Domain.Entities.csproj
@@ -23,7 +23,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.25.0-alpha" />
-		<PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.6.0-alpha" />
+		<PackageReference Include="MCB.Core.Infra.CrossCutting.Abstractions" Version="0.3.0-alpha" />
 		<PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator" Version="0.15.0-alpha" />
 	</ItemGroup>
 
